--- a/hello.html
+++ b/hello.html
@@ -6,5 +6,6 @@
     <body>
         <h1>Welcome to the webpage!</h1>
         Hello, world!
+        <h2>End of the webpage.</h2>
     </body>
 </html>
