--- a/hello.html
+++ b/hello.html
@@ -2,9 +2,14 @@
 <html>
     <head>
         <title>Hello</title>
+        <style>
+            h1{
+                color: blue;
+            }
+        </style>
     </head>
     <body>
-        <h1 stylle="color:blue;">Welcome to the webpage!</h1>
+        <h1>Welcome to the webpage!</h1>
         Hello, world!
         <h2>End of the webpage.</h2>
     </body>
