Added a list of checkpoints

--- a/hello.html
+++ b/hello.html
@@ -6,6 +6,11 @@
     <body>
         <h1 stylle="color:blue;">Welcome to the webpage!</h1>
         Hello, world!
+        <ul>
+            Some checkpoints
+            <li>Taco Tuesday</li>
+            <li>Pizza Weekend</li>
+        </ul>
         <h2>End of the webpage.</h2>
     </body>
 </html>
