Mensage de confirmacion usando el "$EDITOR"

--- a/hello.html
+++ b/hello.html
@@ -11,6 +11,7 @@
     <body>
         <h1>Welcome to the webpage!</h1>
         Hello, world!
+        This is a new line to review git.
         <ul>
             Some checkpoints
             <li>Taco Tuesday</li>
